@@ -59,7 +59,7 @@ public class HColumnDescriptor implements ISerializable, WritableComparable<HCol
   /** 
    * The type of compression.
    * @see org.apache.hadoop.io.SequenceFile.Writer
-   * @deprecated Replaced by {@link Compression.Algorithm}.
+   * @deprecated
    */
   @Deprecated
   public static enum CompressionType {
