@@ -23,6 +23,7 @@ import java.io.IOException;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
+import org.apache.hadoop.hbase.io.hfile.HFile;
 import org.apache.hadoop.hbase.util.Bytes;
 import org.apache.hadoop.io.RawComparator;
 
@@ -227,62 +228,56 @@ public class KeyValue {
   }
   
   /**
-   * @param row
+   * Constructs KeyValue structure filled with null value.
+   * @param row - row key (arbitrary byte array)
    * @param timestamp
-   * @return KeyValue structure filled with specified values.
-   * @throws IllegalArgumentException
    */
   public KeyValue(final String row, final long timestamp) {
     this(Bytes.toBytes(row), timestamp);
   }
 
   /**
-   * @param row
+   * Constructs KeyValue structure filled with null value.
+   * @param row - row key (arbitrary byte array)
    * @param timestamp
-   * @return KeyValue structure filled with specified values.
-   * @throws IllegalArgumentException
    */
   public KeyValue(final byte [] row, final long timestamp) {
     this(row, null, timestamp, Type.Put, null);
   }
 
   /**
-   * @param row
+   * Constructs KeyValue structure filled with null value.
+   * @param row - row key (arbitrary byte array)
    * @param column Column with delimiter between family and qualifier
-   * @return KeyValue structure filled with specified values.
-   * @throws IllegalArgumentException
    */
   public KeyValue(final String row, final String column) {
     this(row, column, null);
   }
 
   /**
-   * @param row
+   * Constructs KeyValue structure filled with null value.
+   * @param row - row key (arbitrary byte array)
    * @param column Column with delimiter between family and qualifier
-   * @return KeyValue structure filled with specified values.
-   * @throws IllegalArgumentException
    */
   public KeyValue(final byte [] row, final byte [] column) {
     this(row, column, null);
   }
 
   /**
-   * @param row
+   * Constructs KeyValue structure filled with specified value.
+   * @param row - row key (arbitrary byte array)
    * @param column Column with delimiter between family and qualifier
    * @param value
-   * @return KeyValue structure filled with specified values.
-   * @throws IllegalArgumentException
    */
   public KeyValue(final String row, final String column, final byte [] value) {
     this(Bytes.toBytes(row), Bytes.toBytes(column), value);
   }
 
   /**
-   * @param row
+   * Constructs KeyValue structure filled with specified value.
+   * @param row - row key (arbitrary byte array)
    * @param column Column with delimiter between family and qualifier
    * @param value
-   * @return KeyValue structure filled with specified values.
-   * @throws IllegalArgumentException
    */
   public KeyValue(final byte [] row, final byte [] column, final byte [] value) {
     this(row, column, HConstants.LATEST_TIMESTAMP, value);
@@ -290,34 +285,31 @@ public class KeyValue {
 
 
   /**
-   * @param row
+   * Constructs KeyValue structure filled with null value.
+   * @param row - row key (arbitrary byte array)
    * @param column Column with delimiter between family and qualifier
    * @param ts
-   * @return KeyValue structure filled with specified values.
-   * @throws IllegalArgumentException
    */
   public KeyValue(final String row, final String column, final long ts) {
     this(row, column, ts, null);
   }
 
   /**
-   * @param row
+   * Constructs KeyValue structure filled with null value.
+   * @param row - row key (arbitrary byte array)
    * @param column Column with delimiter between family and qualifier
    * @param ts
-   * @return KeyValue structure filled with specified values.
-   * @throws IllegalArgumentException
    */
   public KeyValue(final byte [] row, final byte [] column, final long ts) {
     this(row, column, ts, Type.Put);
   }
 
   /**
-   * @param row
+   * Constructs KeyValue structure filled with specified value.
+   * @param row - row key (arbitrary byte array)
    * @param column Column with delimiter between family and qualifier
    * @param timestamp
    * @param value
-   * @return KeyValue structure filled with specified values.
-   * @throws IllegalArgumentException
    */
   public KeyValue(final String row, final String column,
     final long timestamp, final byte [] value) {
@@ -327,12 +319,11 @@ public class KeyValue {
   }
 
   /**
-   * @param row
+   * Constructs KeyValue structure filled with specified value.
+   * @param row - row key (arbitrary byte array)
    * @param column Column with delimiter between family and qualifier
    * @param timestamp
    * @param value
-   * @return KeyValue structure filled with specified values.
-   * @throws IllegalArgumentException
    */
   public KeyValue(final byte [] row, final byte [] column,
      final long timestamp, final byte [] value) {
@@ -340,13 +331,12 @@ public class KeyValue {
   }
 
   /**
-   * @param row
+   * Constructs KeyValue structure filled with specified value.
+   * @param row - row key (arbitrary byte array)
    * @param column Column with delimiter between family and qualifier
    * @param timestamp
    * @param type
    * @param value
-   * @return KeyValue structure filled with specified values.
-   * @throws IllegalArgumentException
    */
   public KeyValue(final String row, final String column,
      final long timestamp, final Type type, final byte [] value) {
@@ -355,12 +345,11 @@ public class KeyValue {
   }
 
   /**
-   * @param row
+   * Constructs KeyValue structure filled with null value.
+   * @param row - row key (arbitrary byte array)
    * @param column Column with delimiter between family and qualifier
    * @param timestamp
    * @param type
-   * @return KeyValue structure filled with specified values.
-   * @throws IllegalArgumentException
    */
   public KeyValue(final byte [] row, final byte [] column,
       final long timestamp, final Type type) {
@@ -369,13 +358,12 @@ public class KeyValue {
   }
 
   /**
-   * @param row
+   * Constructs KeyValue structure filled with specified value.
+   * @param row - row key (arbitrary byte array)
    * @param column Column with delimiter between family and qualifier
    * @param timestamp
    * @param type
    * @param value
-   * @return KeyValue structure filled with specified values.
-   * @throws IllegalArgumentException
    */
   public KeyValue(final byte [] row, final byte [] column,
       final long timestamp, final Type type, final byte [] value) {
@@ -384,7 +372,8 @@ public class KeyValue {
   }
 
   /**
-   * @param row
+   * Constructs KeyValue structure filled with specified value.
+   * @param row - row key (arbitrary byte array)
    * @param roffset
    * @param rlength
    * @param column Column with delimiter between family and qualifier
@@ -395,7 +384,6 @@ public class KeyValue {
    * @param value
    * @param voffset
    * @param vlength
-   * @return KeyValue
    * @throws IllegalArgumentException
    */
   public KeyValue(final byte [] row, final int roffset, final int rlength,
@@ -410,7 +398,7 @@ public class KeyValue {
 
   /**
    * Write KeyValue format into a byte array.
-   * @param row
+   * @param row - row key (arbitrary byte array)
    * @param roffset
    * @param rlength
    * @param column
@@ -541,7 +529,7 @@ public class KeyValue {
   }
 
   /**
-   * @param b Key portion of a KeyValue.
+   * @param k Key portion of a KeyValue.
    * @return Key as a String.
    */
   public static String keyToString(final byte [] k) {
@@ -742,7 +730,7 @@ public class KeyValue {
   }
 
   /**
-   * @param rowlength Pass if you have it to save on an int creation.
+   * @param rowlength - length of row.
    * @return Offset into backing buffer at which the column begins
    */
   public int getColumnOffset(final int rowlength) {
@@ -1031,8 +1019,8 @@ public class KeyValue {
 
     /**
      * @param left
-     * @param row
-     * @return
+     * @param row - row key (arbitrary byte array)
+     * @return RawComparator
      */
     public int compareRows(final KeyValue left, final byte [] row) {
       return getRawComparator().compareRows(left.getBuffer(),
@@ -1169,7 +1157,6 @@ public class KeyValue {
 
     /**
      * @return Comparator that ignores key type; useful checking deletes
-     * @throws IOException
      */
     public KVComparator getComparatorIgnoringType() {
       KVComparator c = null;
@@ -1184,7 +1171,7 @@ public class KeyValue {
   }
 
   /**
-   * @param row
+   * @param row - row key (arbitrary byte array)
    * @return First possible KeyValue on passed <code>row</code>
    */
   public static KeyValue createFirstOnRow(final byte [] row) {
@@ -1192,8 +1179,8 @@ public class KeyValue {
   }
 
   /**
-   * @param row
-   * @param ts
+   * @param row - row key (arbitrary byte array)
+   * @param ts - timestamp
    * @return First possible key on passed <code>row</code> and timestamp.
    */
   public static KeyValue createFirstOnRow(final byte [] row,
@@ -1202,8 +1189,8 @@ public class KeyValue {
   }
 
   /**
-   * @param row
-   * @param ts
+   * @param row - row key (arbitrary byte array)
+   * @param ts - timestamp
    * @return First possible key on passed <code>row</code>, column and timestamp.
    */
   public static KeyValue createFirstOnRow(final byte [] row, final byte [] c,
