@@ -86,6 +86,7 @@ Release 0.20.0 - Unreleased
    HBASE-1058  Prevent runaway compactions
    HBASE-1292  php thrift's getRow() would throw an exception if the row does
                not exist (Rong-en Fan via Stack)
+   HBASE-1340  Fix new javadoc warnings (Evgeny Ryabitskiy via Stack)
 
   IMPROVEMENTS
    HBASE-1089  Add count of regions on filesystem to master UI; add percentage
